Fixed ScrollBar

--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,28 @@
   } */
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #44403c;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #a8a29e;
+}
+
 .gradient-background {
   background-image: linear-gradient(
     135deg,
